examples/negative/silent_contract/main_row_user_effect.kai
# Silent contract (#511 audit): `main : Int / Net` declares the
# user-defined effect `Net` in its row. There is no default
# handler for `Net` (only the canonical stdlib effects — Console,
# Stdout, Mutable, Spawn, Cancel — get default handlers per
# docs/effects-stdlib.md). The kaikai compiler accepts; the
# resulting binary segfaults. The typer should reject any
# top-level program whose row contains a user effect with no
# handler installed before `main` runs.

effect Net { fetch(url: String) : String }

fn main() : Int / Net {
  let _ = Net.fetch("x")
  0
}
